--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Nabla&family=Rock+3D&family=Special+Elite&display=swap" rel="stylesheet">
 </head>
 <body>
 <app-root></app-root>
