--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="de">
 <head>
+  <link rel="icon" type="image/png" href="/assets/spinningRecord%20Kopie.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Fugaz+One&family=Nabla&family=Rock+3D&family=Special+Elite&display=swap" rel="stylesheet">
